setup/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default-gateway
spec:
  gatewayClassName: example
  listeners:
    - protocol: HTTP
      port: 80
      name: default-gateway-http-listener
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-httproute
spec:
  parentRefs:
    - name: default-gateway
  hostnames:
    - "kubecluster"
  rules:
    - matches:
        - path:
            type: Prefix
            value: /argocd
      backendRefs:
        - name: argocd-server
          port: 80
